--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Jonathan Coutinho!</h1>
+        		<h1>Hi there, I'm Jonathan Coutinho!</h1>
 				<p>I am a current Masters student at the University of Manchester specicalising in Artificial Intelligence. I am an ML enthusiast, currently fascinated by multi-agent reinforcement learning. Read  more about me here...<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
