--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Jonathan Coutinho</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Jonathan Coutinho!</h1>
-				<p>I am a current Masters student at the University of Manchester specicalising in Artificial Intelligence. I am an ML enthusiast, currently fascinated by multi-agent reinforcement learning. Read  more about me here...<a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:jonathan.lcoutinho@gmail.com">email</a></li>
-        		<li><a href="https://github.com/johnnysun8">github.com/johnnysun8</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Jonathan Coutinho
+---
+<div class="blurb">
+        <h1>Hi there, I'm Jonathan Coutinho!</h1>
+	<p>I am a current Masters student at the University of Manchester specicalising in Artificial Intelligence. I am an ML enthusiast, currently fascinated by multi-agent reinforcement learning. Read  more about me here...<a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
