--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: Jonathan Coutinho
 ---
 <div class="blurb">
         <h1>Hi there, I'm Jonathan Coutinho!</h1>
-	<p>I am a current Masters student at the University of Manchester specicalising in Artificial Intelligence. I am an ML enthusiast, currently fascinated by multi-agent reinforcement learning. Read  more about me here...<a href="/about">Read more about my life...</a></p>
+	<p>I am a current Masters student at the University of Manchester specicalising in Artificial Intelligence. I am an ML enthusiast, currently fascinated by multi-agent reinforcement learning.
+	<a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
